--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
-
+@import "btnConfig";
+@import "utilities";
+@import "config";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -21,14 +23,59 @@ a {
 
 .hero {
   // This is where the bulk of the SCSS styling needs to be done
+  @include set-bg($primary-color);
+  height: 600px;
 
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 10%;
+
+    ul {
+      list-style: none;
+      display: flex;
+    }
+
+      li {
+        padding: 15px;
+      }
+      
+      a {
+        color: $secondary-color;
+        font-size: 18px;
+        font-weight: 700;
+      }
+
+      a:hover {
+        color: $secondary-color;
+      }
+}
+
+&-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+  padding: 0 30px;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  font-size: 55px;
+}
   // Take a look at the other files we've built already. How can they be useful here?
 
   // Also, take time to review the features of SCSS we've already covered:
   // 1. $variables
   // 2. nesting (dont forget about the ampersand (&) parent selector!)
   // 3. At-Rules
-}
+
 
 // This code is related to some of the aspects of SCSS we have yet to cover.
 // While you don't have to mess with it, it would be advisable to attempt to understand its functionality.
@@ -48,4 +95,5 @@ $spaceamounts: (1,2,3,4,5);
   .py-#{$space} {
     padding: #{$space}rem 0;
   }
+}
 }
