--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,8 +21,8 @@ a {
   text-decoration: none;
 }
 
+// This is where the bulk of the SCSS styling needs to be done
 .hero {
-  // This is where the bulk of the SCSS styling needs to be done
   @include set-bg($primary-color);
   height: 600px;
 
@@ -30,46 +30,44 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 10%;
 
     ul {
-      list-style: none;
       display: flex;
+      list-style-type: none;
     }
 
-      li {
-        padding: 15px;
-      }
-      
-      a {
-        color: $secondary-color;
-        font-size: 18px;
-        font-weight: 700;
-      }
+    li {
+      padding: 15px;
+    }
 
-      a:hover {
-        color: $secondary-color;
-      }
+    a {
+      color: text-color-picker($primary-color);
+    }
+
+    a:hover {
+      color: $secondary-color;
+    }
+  }
+
+  &-content {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+
+    img {
+      width: 50%;
+    }
+
+    h1 {
+      font-size: 50px;
+      line-height: 1.2;
+    }
+  }
 }
 
-&-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 100%;
-  padding: 0 30px;
-}
-
-img {
-  max-width: 100%;
-}
-
-h1 {
-  font-size: 55px;
-}
-  // Take a look at the other files we've built already. How can they be useful here?
+// Take a look at the other files we've built already. How can they be useful here?
 
   // Also, take time to review the features of SCSS we've already covered:
   // 1. $variables
@@ -78,22 +76,4 @@ h1 {
 
 
 // This code is related to some of the aspects of SCSS we have yet to cover.
-// While you don't have to mess with it, it would be advisable to attempt to understand its functionality.
-$spaceamounts: (1,2,3,4,5);
-
-@each $space in $spaceamounts {
-  .m-#{$space} {
-    margin: #{$space}rem;
-  }
-  .my-#{$space} {
-    margin: #{$space}rem 0;
-  }
-
-  .p-#{$space} {
-    padding: #{$space}rem;
-  }
-  .py-#{$space} {
-    padding: #{$space}rem 0;
-  }
-}
-}
+// While you don't have to mess with it, it would be advisable to attempt to understand its functionality
